Opened 12 years ago
Closed 12 years ago
#3470 closed defect (fixed)
Encoding to webm fails if the input file contains subtitles
| Reported by: | ppuru | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | webm regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
% ffmpeg -i file16.MTS -c:v libvpx -c:a libvorbis -ar 41k -quality good -b:v 2147k -crf 15 file16.webm
ffmpeg version 2.1.4 Copyright (c) 2000-2014 the FFmpeg developers
built on Mar 12 2014 23:11:52 with gcc 4.8 (Ubuntu/Linaro 4.8.1-10ubuntu9)
configuration: --enable-gpl --enable-runtime-cpudetect --enable-nonfree --enable-postproc --enable-version3 --enable-frei0r --enable-libfaac --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libtheora --enable-libvorbis --enable-libx264 --enable-x11grab --enable-libschroedinger --enable-swscale --enable-libopenjpeg --enable-libxvid --enable-libvpx --enable-libspeex --enable-librtmp --enable-vdpau --enable-avcodec --enable-avfilter --enable-avformat --enable-avdevice --enable-vaapi --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-openssl --enable-gnutls --enable-libgsm --enable-libmodplug --enable-libass --enable-libpulse --enable-libfdk-aac --enable-openal --enable-libxavs --enable-libdc1394 --enable-libopus --enable-libaacplus
libavutil 52. 48.101 / 52. 48.101
libavcodec 55. 39.101 / 55. 39.101
libavformat 55. 19.104 / 55. 19.104
libavdevice 55. 5.100 / 55. 5.100
libavfilter 3. 90.100 / 3. 90.100
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 17.104 / 0. 17.104
libpostproc 52. 3.100 / 52. 3.100
Input #0, mpegts, from 'file16.MTS':
Duration: 00:08:38.50, start: 1.033367, bitrate: 16443 kb/s
Program 1
Stream #0:0[0x1011]: Video: h264 (High) (HDMV / 0x564D4448), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 29.97 fps, 59.94 tbr, 90k tbn, 59.94 tbc
Stream #0:1[0x1100]: Audio: ac3 (AC-3 / 0x332D4341), 48000 Hz, stereo, fltp, 256 kb/s
Stream #0:2[0x1200]: Subtitle: hdmv_pgs_subtitle ([144][0][0][0] / 0x0090), 1920x1080
Output #0, webm, to 'file16.webm':
Stream #0:0: Video: vp8, yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], q=-1--1, 200 kb/s, 90k tbn, 29.97 tbc
Stream #0:1: Audio: vorbis, 48000 Hz, stereo, fltp
Stream #0:2: Subtitle: none, 128 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (h264 -> libvpx)
Stream #0:1 -> #0:1 (ac3 -> libvorbis)
Stream #0:2 -> #0:2 (pgssub -> ?)
Encoder (codec none) not found for output stream #0:2
The MTS file is created on a Sony A77.
This could relate to bug#379
Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.
Change History (3)
comment:1 by , 12 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | mkv regression added; pgssub MTS webm removed |
| Priority: | normal → important |
| Status: | new → open |
| Summary: | pgssub -> ? while converting MTS to webm → Encoding to webm fails if the input file contains subtitles |
| Version: | 2.1.4 → git-master |
comment:2 by , 12 years ago
| Keywords: | webm added; mkv removed |
|---|
comment:3 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



For future tickets: Please always test current FFmpeg git head before reporting problems.