ffmpeg_opt: check that a subtitle encoder is available before auto mapping streams

Fixes Ticket3470

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 25bcf24d4d0faf0191923be8afac8f67ca98b500)